--- a/src/app/components/layout-components/footer/footer.component.html
+++ b/src/app/components/layout-components/footer/footer.component.html
@@ -1,1 +1,23 @@
-<p>footer works!</p>
+<div class="bg-primary-800 h-56 flex items-center justify-center w-full">
+  <div class="max-w-7xl flex items-center justify-between w-full">
+    <div class="text-white">
+      <div class="text-2xl font-bold">Shoply.</div>
+      <div class="text-lg">© Copyright 2021. Created by OurTeam</div>
+    </div>
+    <div class="flex items-center">
+      <a class="mr-5" href="https://www.facebook.com/" target="_blank" >
+        <img src="assets/icons/facebook.png" alt="facebook" />
+      </a>
+      <a class="mr-5" href="https://www.instagram.com/" target="_blank">
+        <img src="assets/icons/instagram.png" alt="instagram"  />
+      </a>
+      <a class="mr-5" href="https://www.twitter.com/" target="_blank">
+        <img src="assets/icons/twitter.png" alt="twitter" />
+      </a>
+      <a class="mr-5" href="https://www.youtube.com/" target="_blank">
+        <img src="assets/icons/youtube.png" alt="youtube" />
+      </a>
+    </div>
+
+  </div>
+</div>
