--- a/src/app/components/layout-components/header/header.component.html
+++ b/src/app/components/layout-components/header/header.component.html
@@ -1,16 +1,23 @@
-<div class="flex items-center justify-center">
-  <div class="flex items-center justify-center">
-    <div
-      class="text-blue-500 cursor-pointer hover:text-red-600"
-      *ngFor="let link of links"
-      [routerLink]="link.to"
-      routerLinkActive="font-bold"
-      [routerLinkActiveOptions]="{ exact: true }"
-    >
-      {{ link.text }}
+<div class="flex items-center justify-center w-full bg-primary-300 h-[115px]">
+  <div class="w-full flex items-center justify-between max-w-7xl">
+    <div class="text-3xl leading=9 font-bold">Shoply.</div>
+    <div class="flex items-center justify-between max-w-[427px] w-full">
+      <div
+        class="text-primary-600 cursor-pointer hover:text-red-600 text-base leading-5 decoration-2 underline underline-offset-8"
+        *ngFor="let link of links"
+        [routerLink]="link.to"
+        routerLinkActive="font-bold text-primary-900"
+        [routerLinkActiveOptions]="{ exact: true }"
+      >
+        {{ link.text }}
+      </div>
+    </div>
+    <div class="flex items-center ">
+      <button [routerLink]="cartUrl" class="mr-16 relative">
+        <img src="assets/icons/cart.png" alt="cart">
+        <div class="absolute top-0 right-0 h-4 w-4 rounded-full bg-red-500 text-white text-sm flex items-center justify-center">0</div>
+      </button>
+      <button [routerLink]="loginUrl" class="w-[113px] bg-primary-900 text-white h-10">Login</button>
     </div>
   </div>
-
-  <div [routerLink]="cartUrl" class="link">Cart</div>
-  <div [routerLink]="loginUrl" class="link">Login</div>
 </div>
