added product component

--- a/src/app/components/layout-components/header/header.component.html
+++ b/src/app/components/layout-components/header/header.component.html
@@ -15,7 +15,7 @@
     <div class="flex items-center ">
       <button [routerLink]="cartUrl" class="mr-16 relative">
         <img src="assets/icons/cart.png" alt="cart">
-        <div class="absolute top-0 right-0 h-4 w-4 rounded-full bg-red-500 text-white text-sm flex items-center justify-center">0</div>
+        <div class="absolute -top-1 -right-3 h-4 w-4 rounded-full bg-red-500 text-white text-sm flex items-center justify-center">0</div>
       </button>
       <button [routerLink]="loginUrl" class="w-[113px] bg-primary-900 text-white h-10">Login</button>
     </div>
