--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -15,19 +15,20 @@
         <FormInput icon="assets/icons/user.png"></FormInput>
         <FormInput type="password" icon="assets/icons/lock.png"></FormInput>
         <div class="text-base text-[#334756] text-right mr-4 mt-2">
-          <a
-            routerLink="forgotPasswordUrl"
-            href="/auth/forgot-password"
-            class="hover:text-primary-900 cursor-pointer"
-            >Forgot Password</a
-          >
+          <a [routerLink]="forgotPasswordUrl" class="hover:text-primary-900">Forgot Password</a>
         </div>
         <div>
-          <button class="bg-primary-900 rounded-full text-white w-full h-[52px] mt-11">Masuk</button>
-            <div class="w-full text-center mt-6">
-              <span class="text-[#334756]">belum punya akun? </span>
-               <span class="text-[#616467] underline underline-offset-4"> daftar sekaang</span>
-            </div>
+          <button
+            class="bg-primary-900 rounded-full text-white w-full h-[52px] mt-11"
+          >
+            Masuk
+          </button>
+          <div class="w-full text-center mt-6">
+            <span class="text-[#334756]">belum punya akun? </span>
+            <span class="text-[#616467] underline underline-offset-4">
+              daftar sekaang</span
+            >
+          </div>
         </div>
       </form>
     </div>
