--- a/src/app/components/base/form-input/form-input.component.html
+++ b/src/app/components/base/form-input/form-input.component.html
@@ -1,9 +1,20 @@
-<div class="h-[52px] w-full px-[18px]  rounded-full bg-[#F3F6FF] flex items-center justify-between mt-3">
-  <div *ngIf="icon">
-    <img [src]="icon" alt="icon">
-  </div>
-  <div class="w-full ml-2 h-full">
-    <input [type]="type" class="w-full h-full bg-[#F3F6FF] outline-none">
+<div
+  class=" w-full px-[18px]  mt-3"
+>
+  <div class=" h-[52px] flex items-center justify-between rounded-full bg-[#F3F6FF] ">
+    <div *ngIf="icon">
+      <img [src]="icon" alt="icon" />
+    </div>
+    <div class="w-full ml-2 h-full">
+      <input
+        [type]="type"
+        [formControl]="control"
+        class="w-full h-full bg-[#F3F6FF] outline-none"
+      />
+    </div>
   </div>
 
+  <div class="text-red-500 ml-4 text-sm mt-1">
+    {{ errorMessage }}
+  </div>
 </div>
