--- a/src/app/components/base/form-input/form-input.component.html
+++ b/src/app/components/base/form-input/form-input.component.html
@@ -1,7 +1,7 @@
 <div
-  class=" w-full px-[18px]  mt-3"
+  class=" w-full  mt-3"
 >
-  <div class=" h-[52px] flex items-center justify-between rounded-full bg-[#F3F6FF] ">
+  <div class=" h-[52px] px-[18px] flex items-center justify-between rounded-full bg-[#F3F6FF] ">
     <div *ngIf="icon">
       <img [src]="icon" alt="icon" />
     </div>
@@ -14,7 +14,7 @@
     </div>
   </div>
 
-  <div class="text-red-500 ml-4 text-sm mt-1">
+  <div class="text-red-500 ml-4 text-sm mt-1" *ngIf="areMessageShown">
     {{ errorMessage }}
   </div>
 </div>
