--- a/src/app/components/product-components/product-card/product-card.component.html
+++ b/src/app/components/product-components/product-card/product-card.component.html
@@ -7,6 +7,7 @@
       <div class="w-[205px]">
         <button
           class="bg-primary-700 rounded-xl uppercase text-white h-9 w-[138px]"
+          [routerLink]="productUrl"
         >
           detail
         </button>
