--- a/src/app/pages/products/products-list/products-list.component.html
+++ b/src/app/pages/products/products-list/products-list.component.html
@@ -1,6 +1,6 @@
 <section class="flex items-center justify-center px-[76px] py-9 mb-[125px]">
   <div class="max-w-7xl w-full mt-9">
-    <div class="w-full mb-[50px]">
+    <div class="w-full mb-[50px] cursor-pointer">
       <Breadcrumb [items]="breadcrumb"></Breadcrumb>
     </div>
     <div class="flex w-full">
