add router link to products

--- a/src/app/components/home-components/home-product/home-product.component.html
+++ b/src/app/components/home-components/home-product/home-product.component.html
@@ -10,6 +10,7 @@
     <div class="mt-16">
       <button
         class="uppercase bg-primary-700 text-white w-[218px] h-[54px] rounded-sm flex items-center justify-center"
+        [routerLink]="productUrl"
       >
         <div>All product</div>
         <div class="ml-2">
